nav collapse fix

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -205,7 +205,6 @@ ul {
 	}
 
 	.navbar-toggle {
-		z-index: 200;
 		margin-right: 20px;
 
 		.icon-bar {
